fix subscription endpoint
