# main.go
@@ -31,6 +31,7 @@ func main() {
 
 	r.GET("/api/rate", handlers.GetRate)
 	r.POST("/api/subscribe", handlers.Subscribe)
+	r.GET("/api/subscriptions", handlers.GetSubscriptions)
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
