# models/subscription.go
@@ -1,8 +1,13 @@
 package models
 
-import "github.com/jinzhu/gorm"
+import (
+	"time"
+)
 
 type Subscription struct {
-	gorm.Model
-	Email string `gorm:"unique;not null"`
+	ID        uint       `gorm:"primary_key" json:"id"`
+	CreatedAt time.Time  `json:"created_at"`
+	UpdatedAt time.Time  `json:"updated_at"`
+	DeletedAt *time.Time `sql:"index" json:"deleted_at,omitempty"`
+	Email     string     `gorm:"unique;not null" json:"email"`
 }
